# poc

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
data/processed/: item_encoder.pkl  item_id_index.json  test.csv  user_encoder.pkl  user_id_index.json  val.csv
data/processed/amazon-2014/: item_encoder.pkl  user_encoder.pkl
hpo_jobs/: vertex_ai_job.py
hpo_jobs/amazon-2014/: vertex_ai_biased_svd.py
notebooks/: biased_svd.ipynb  exploratory-analisys.ipynb  init_path.py
notebooks/Colab/: BaseOptunaNotebook.ipynb  BeautyBiasedSVD.ipynb  ClothingBiasedSVD.ipynb  Tensorboard.ipynb
scripts/: 1_read_amazon_ratings.py  2_leave_one_out_split.py  3_precompute_test_neg_samples.py  build_and_push.sh  leave-one-out-split.py  read-ratings.py  sync-data.sh
src/: config.py  configurable_builder.py  environment.py  trainer.py
src/artifacts_saver/: artifacts_saver.py  google_cloud_artifact_saver.py  local_artifacts_saver.py
src/artifacts_savers/: artifacts_saver.py  google_cloud_artifact_saver.py  local_artifacts_saver.py
src/datasets/: negative_sampling_dataset.py  pairwise.py  pointwise.py  precomputed_test_dataset.py  recommendation_dataset.py
src/experiment_trackers/: experiment_tracker.py  noop_experiment_tracker.py  optuna_experiment_tracker.py  vertex_ai_experiment_tracker.py
src/loggers/: logger.py  tensorboard_logger.py
src/losses/: bpr.py  pairwise_losses.py
src/metrics/: listwise_metrics.py  metrics.py  ndcg_at_k.py
src/models/: biased_svd.py  recommender.py
src/utils/: recommender_trainer.py
(+15 files in other folders)
