[project]
name = "enhancedgcr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gcsfs>=2025.9.0",
    "google-cloud-aiplatform>=1.124.0",
    "google-cloud-storage>=3.4.1",
    "hypertune>=1.2.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "tensorboard>=2.20.0",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]   
